Fix GroupAction select not showing when action is chosen

--- a/assets/src/datagrid.scss
+++ b/assets/src/datagrid.scss
@@ -629,6 +629,9 @@
       margin-bottom: 0;
       vertical-align: middle;
     }
+    .ublaboo-datagrid-th-form-inline .form-control[hidden] {
+      display: none;
+    }
     .ublaboo-datagrid-th-form-inline .form-control {
       display: inline-block;
       width: auto;
